Render ships on first player gameboard

--- a/src/styles.css
+++ b/src/styles.css
@@ -61,6 +61,10 @@ main {
   outline: 1px salmon solid;
 }
 
+.ship {
+  background-color: salmon;
+}
+
 footer {
   position: fixed;
   bottom: 10px;
