--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@
 * {
   --header-font: "Press Start 2P", "Roboto";
   --title-font: "Winky sans", "Arial";
+  --copper-color: #cd7f32;
 }
 body {
   height: 100%;
@@ -65,7 +66,7 @@ main {
 
 .cell-header {
   font-size: 16px;
-  color: #cd7f32;
+  color: var(--copper-color);
   font-weight: bold;
   text-align: center;
   line-height: 30px;
@@ -84,7 +85,7 @@ main {
 }
 
 .ship {
-  background-color: #cd7f32;
+  background-color: var(--copper-color);
 }
 
 .events-container {
@@ -96,8 +97,8 @@ main {
 
 .event-log {
   background-color: transparent;
-  color: #cd7f32;
-  border: #cd7f32 solid 2px;
+  color: var(--copper-color);
+  border: var(--copper-color) solid 2px;
   border-radius: 10px;
   overflow: auto;
   height: 140px;
@@ -108,7 +109,7 @@ main {
   display: flex;
   align-items: center;
   gap: 10px;
-  border-block-end: solid #cd7f32 2px;
+  border-block-end: solid var(--copper-color) 2px;
 }
 
 p.turn {
@@ -164,4 +165,58 @@ footer {
   font-family: "Roboto";
   font-weight: 400;
   font-size: 14px;
+}
+
+/* DIALOGS CSS */
+#game-over-dailog {
+  width: 360px;
+  height: 360px;
+
+  top: 50%;
+  bottom: 50%;
+  position: absolute;
+
+  border: var(--copper-color) solid 2px;
+  border-radius: 16px;
+  background-color: transparent;
+}
+
+.game-over-dailog-div {
+  display: grid;
+  grid-template-rows: repeat(4, 60px);
+  justify-content: center;
+  align-items: center;
+  color: var(--copper-color);
+  gap: 36px;
+}
+
+.game-over-divs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.game-over-divs .heading {
+  font-size: 16px;
+}
+
+.game-over-divs p {
+  margin: 0;
+}
+
+#new-game-button {
+  font-size: 18px;
+  padding: 10px 20px;
+
+  color: var(--copper-color);
+  background-color: transparent;
+  outline: var(--copper-color);
+
+  border: var(--copper-color) solid 2px;
+  border-radius: 8px;
+}
+
+#new-game-button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
