--- a/src/styles.css
+++ b/src/styles.css
@@ -168,7 +168,7 @@ footer {
 }
 
 /* DIALOGS CSS */
-#game-over-dailog {
+#game-over-dialog {
   width: 360px;
   height: 360px;
 
@@ -181,7 +181,7 @@ footer {
   background-color: transparent;
 }
 
-.game-over-dailog-div {
+.game-over-dialog-div {
   display: grid;
   grid-template-rows: repeat(4, 60px);
   justify-content: center;
@@ -204,7 +204,8 @@ footer {
   margin: 0;
 }
 
-#new-game-button {
+#new-game-button,
+#start-button {
   font-size: 18px;
   padding: 10px 20px;
 
@@ -216,7 +217,37 @@ footer {
   border-radius: 8px;
 }
 
-#new-game-button:hover {
+#new-game-button:hover,
+#start-button:hover {
   cursor: pointer;
   transform: scale(1.1);
+}
+
+#game-start-dialog {
+  width: 760px;
+  height: 560px;
+
+  top: 50%;
+  bottom: 50%;
+  position: absolute;
+
+  border: var(--copper-color) solid 2px;
+  border-radius: 16px;
+  background-color: transparent;
+}
+
+.game-start-dialog-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+
+  h4 {
+    color: #faebd7;
+  }
+}
+
+#start-dialog-board .cell-header {
+  margin-right: 5px;
 }
